overflow-x: hidden removed as it was causing weird div scroll bug

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,6 @@
   font-family: sans-serif;
   margin: 0;
   border: 0;
-  overflow-x: hidden;
 }
 
 .bkg-parallax .title-desc  {
